<resources>
    <integer name="google_play_services_version">12451000</integer>
    <string name="app_name">Car Pooling</string>
    <string name="title1">Welcome to the</string>
    <string name="title2">Car Pooling Application!</string>
    <string name="profile_save">Profile information saved!</string>
    <string name="required_string"> <sup><small>*</small></sup>Required field </string>
    <string name="departure"> Departure<sup><small>*</small></sup> </string>
    <string name="arrival"> Arrival<sup><small>*</small></sup> </string>
    <string name="date"> Date<sup><small>*</small></sup> </string>
    <string name="time"> Time<sup><small>*</small></sup> </string>
    <string name="seats"> Available Seats<sup><small>*</small></sup> </string>
    <string name="price"> Price<sup><small>*</small></sup> </string>
    <string name="duration"> Estimated Duration (hh:mm) </string>
    <string name="info"> Additional Information </string>
    <string name="stops"> Intermediate Stops </string>
    <string name="fullName"> Full Name<sup><small>*</small></sup> </string>
    <string name="nickName"> Nickname<sup><small>*</small></sup> </string>
    <string name="birth"> Date of Birth<sup><small>*</small></sup> </string>
    <string name="phone"> Phone Number </string>
    <string name="location"> Location </string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="open_comments">Click to see the comments</string>
    <string name="show_ratings">%s / 5</string>
    <string name="no_ratings">No ratings</string>
    <string name="book_button">Book Trip</string>
    <string name="fab_trip_detail_button">Manage Floating Button</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete Trip</string>
    <string name="remaining_seats">Available Seats: %s</string>
    <string name="no_seats_message">No available seats</string>
    <string name="no_trips_message1">No available trips</string>
    <string name="no_trips_message2">Press the "+" button to add a new trip</string>
    <string name="no_comments_message">No available comments</string>
    <string name="no_proposals_message">No proposals found</string>
    <string name="ratings_completed">Ratings completed</string>
    <string name="no_bookings_message">No confirmed bookings</string>
    <string name="num_ratings">Total ratings: %d</string>
    <string name="ratings_title">%s Ratings:</string>
    <string name="upcoming_tab_id">tabUpcoming</string>
    <string name="upcoming_tab_text">Upcoming Trips</string>
    <string name="completed_tab_id">tabCompleted</string>
    <string name="completed_tab_text">Completed Trips</string>
    <string name="new_trip_button">Create a new Trip</string>
    <string name="proposals_tab_id">tabProp</string>
    <string name="proposals_tab_text">Proposals</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="bookings_tab_id">tabBook</string>
    <string name="bookings_tab_text">Confirmed Bookings</string>
    <string name="confirm_bookings_button">Confirm the bookings</string>
    <string name="edit_message">Click to edit</string>
    <string name="filter_message">Open to filter the trips</string>
    <string name="gallery_pick_message">Select an image from the phone gallery</string>
    <string name="camera_message">Use the camera to take a picture</string>
    <string name="save_message">Click to save</string>
    <string name="show_profiles_message">Click to see the profile</string>
    <string name="add_departure">Pinpoint departure location</string>
    <string name="add_arrival">Pinpoint arrival location</string>
    <string name="trip_route">See the trip route</string>
</resources>